<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/entrada"
        android:layout_width="491dp"
        android:layout_height="46dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:onClick="siete"
        android:text="@string/siete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="48dp"
        android:onClick="ocho"
        android:text="@string/ocho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="48dp"
        android:onClick="nueve"
        android:text="@string/nueve"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/entrada" />

    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:onClick="cuatro"
        android:text="@string/cuatro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="28dp"
        android:onClick="cinco"
        android:text="@string/cinco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:onClick="seis"
        android:text="@string/seis"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:onClick="uno"
        android:text="@string/uno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="32dp"
        android:onClick="dos"
        android:text="@string/dos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="264dp"
        android:onClick="tres"
        android:text="@string/tres"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonmas"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="176dp"
        android:onClick="suma"
        android:text="@string/mas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonmenos"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="80dp"
        android:onClick="menos"
        android:text="@string/menos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/buttonpor"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="180dp"
        android:onClick="multiplicacion"
        android:text="@string/por"
        app:layout_constraintStart_toEndOf="@+id/buttonmenos"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonentre"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:onClick="division"
        android:text="@string/entre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonmas" />

    <Button
        android:id="@+id/buttonborrar"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="48dp"
        android:onClick="borrar"
        android:text="@string/borrar"
        app:layout_constraintStart_toEndOf="@+id/buttonentre"
        app:layout_constraintTop_toBottomOf="@+id/buttonmenos" />

    <Button
        android:id="@+id/button10"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="44dp"
        android:onClick="cero"
        android:text="@string/cero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonigual"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:onClick="igual"
        android:text="@string/igual"
        app:layout_constraintStart_toEndOf="@+id/buttonborrar"
        app:layout_constraintTop_toBottomOf="@+id/buttonpor" />

    <android.support.v7.widget.GridLayout
        android:layout_width="585dp"
        android:layout_height="186dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="639dp">

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>